--- a/tooldemo/src/main/res/values/array.xml
+++ b/tooldemo/src/main/res/values/array.xml
@@ -6,6 +6,7 @@
         <item>@string/recycle_view_adapter</item>
         <item>@string/multi_item_adapter</item>
         <item>@string/multi_item_recycler_adapter</item>
+        <item>@string/viewpager_adapter</item>
     </string-array>
 
     <string-array name="function_activity_list">
@@ -13,6 +14,7 @@
         <item>com.excellence.tooldemo.RecyclerAdapterActivity</item>
         <item>com.excellence.tooldemo.MultiItemAdapterActivity</item>
         <item>com.excellence.tooldemo.MultiItemRecyclerAdapterActivity</item>
+        <item>com.excellence.tooldemo.ViewPagerAdapterActivity</item>
     </string-array>
 
 </resources>
