--- a/tooldemo/src/main/res/layout/activity_multi_item_type_binding_adapter.xml
+++ b/tooldemo/src/main/res/layout/activity_multi_item_type_binding_adapter.xml
@@ -7,6 +7,7 @@
 
     <data>
         <variable name="adapter" type="android.widget.BaseAdapter"/>
+        <variable name="onItemClickListener" type="android.widget.AdapterView.OnItemClickListener"/>
     </data>
 
     <RelativeLayout
@@ -17,7 +18,8 @@
             android:id="@+id/gridview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:adapter="@{adapter}"/>
+            app:adapter="@{adapter}"
+            app:onItemClickListener="@{onItemClickListener}"/>
 
     </RelativeLayout>
 </layout>
