--- a/tooldemo/src/main/res/layout/item_flower.xml
+++ b/tooldemo/src/main/res/layout/item_flower.xml
@@ -14,9 +14,10 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_centerVertical="true"
+            android:onClick="@{flower.onImageClick}"
             app:img="@{flower.iconRes}"/>
 
         <TextView
