--- a/tooldemo/src/main/res/layout/item_rose.xml
+++ b/tooldemo/src/main/res/layout/item_rose.xml
@@ -6,8 +6,8 @@
     </data>
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:padding="20dp">
 
         <TextView
