重命名示例

--- a/tooldemo/src/main/res/layout/activity_grid_adapter.xml
+++ b/tooldemo/src/main/res/layout/activity_grid_adapter.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.excellence.tooldemo.GridAdapterActivity">
+    tools:context="com.excellence.tooldemo.CommonAdapterActivity">
 
     <Button
         android:id="@+id/refresh_btn"
