--- a/tooldemo/src/main/res/layout/item_flower.xml
+++ b/tooldemo/src/main/res/layout/item_flower.xml
@@ -8,7 +8,7 @@
     </data>
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp">
 
