--- a/tooldemo/src/main/res/layout/item_flower.xml
+++ b/tooldemo/src/main/res/layout/item_flower.xml
@@ -10,6 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="true"
         android:padding="20dp">
 
         <ImageView
