--- a/tooldemo/src/main/res/layout/item_flower.xml
+++ b/tooldemo/src/main/res/layout/item_flower.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
+        android:focusableInTouchMode="true"
         android:padding="20dp">
 
         <ImageView
@@ -22,10 +23,15 @@
             app:img="@{flower.iconRes}"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/text"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/image"
+            android:duplicateParentState="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"
             android:text="@{flower.name}"/>
 
     </RelativeLayout>
