--- a/tooldemo/src/main/res/layout/item_tulip.xml
+++ b/tooldemo/src/main/res/layout/item_tulip.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <variable name="tulip" type="com.excellence.tooldemo.bean.databinding.Tulip"/>
+
+        <variable
+            name="tulip"
+            type="com.excellence.tooldemo.bean.databinding.Tulip" />
     </data>
 
     <RelativeLayout
@@ -16,14 +19,14 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerVertical="true"
-            app:img="@{tulip.iconRes}"/>
+            app:img="@{tulip.iconRes}" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/image"
-            android:text="@{tulip.name}"/>
+            android:text="@{tulip.name}" />
 
     </RelativeLayout>
 </layout>
