--- a/tooldemo/src/main/res/layout/activity_base_recycler_binding_adapter.xml
+++ b/tooldemo/src/main/res/layout/activity_base_recycler_binding_adapter.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.excellence.tooldemo.databinding.BaseRecyclerBindingAdapterActivity">
 
     <data>
-        <variable name="adapter" type="android.support.v7.widget.RecyclerView.Adapter"/>
-        <variable name="layoutManager" type="android.support.v7.widget.RecyclerView.LayoutManager"/>
+
+        <variable
+            name="adapter"
+            type="androidx.recyclerview.widget.RecyclerView.Adapter" />
+
+        <variable
+            name="layoutManager"
+            type="androidx.recyclerview.widget.RecyclerView.LayoutManager" />
     </data>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:adapter="@{adapter}"
-        app:layoutManager="@{layoutManager}"
-    />
+        app:layoutManager="@{layoutManager}" />
 
 </layout>
