--- a/tooldemo/src/main/res/layout/activity_grid_adapter.xml
+++ b/tooldemo/src/main/res/layout/activity_grid_adapter.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/activity_adapter"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_adapter"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.excellence.tooldemo.CommonAdapterActivity">
@@ -12,14 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/refresh"/>
+        android:text="@string/refresh" />
 
     <GridView
         android:id="@+id/adapter_gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/refresh_btn"
-        android:numColumns="3">
-    </GridView>
+        android:numColumns="3" />
 
 </RelativeLayout>
