--- a/tooldemo/src/main/res/layout/item_purple.xml
+++ b/tooldemo/src/main/res/layout/item_purple.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/portrait"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:src="@drawable/purple"/>
+        android:src="@drawable/purple" />
 
     <TextView
         android:id="@+id/purple_text"
@@ -17,6 +17,5 @@
         android:layout_marginLeft="10dp"
         android:layout_toLeftOf="@+id/portrait"
         android:textColor="@android:color/holo_purple"
-        android:textSize="24sp"
-    />
+        android:textSize="24sp" />
 </RelativeLayout>
